# matrix-bot

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  config.sample.conf  default.nix  deploy-docker-hub.sh  dockerimage.nix  gitlab-matrix-bot.cabal  matrix-bot.cabal  nixpkgs.json
app/: Main.hs
docs/: matrix-bot.dhall  overview.dia  sample-config.dhall
src/: Main.hs
src/GMB/: ConfigOptions.hs  Gitlab.hs  Http.hs  INotify.hs  IncomingMessage.hs  Matrix.hs  MonadLog.hs  ProgramOptions.hs  RepoMapping.hs  Util.hs  WebServer.hs
src/Plpd/: Dhall.hs  Http.hs  MonadLog.hs  Util.hs
src/Web/Matrix/: API.hs
src/Web/Matrix/Bot/: API.hs  ConfigOptions.hs  IncomingMessage.hs  ProgramOptions.hs  WebServer.hs
test/: Spec.hs
test/data/: comment.json  commit_event.json  issue.json
