name:                gitlab-matrix-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pmiddend/gitlab-matrix-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          pmidden@secure.mailbox.org
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gitlab-matrix-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: GMB.Http
               , GMB.Matrix
               , GMB.Util
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , filepath
                     , optparse-applicative
                     , text
                     , containers
                     , configurator
                     , attoparsec
                     , aeson
                     , time
                     , iso8601-time
                     , bytestring
                     , free
                     , wreq
                     