name:                gitlab-matrix-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pmiddend/gitlab-matrix-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          pmidden@secure.mailbox.org
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules: GMB.Http
                 , GMB.Matrix
                 , GMB.MonadLog
                 , GMB.Util
                 , GMB.IncomingMessage
                 , GMB.Gitlab
                 , GMB.WebServer
                 , GMB.ConfigOptions
                 , GMB.RepoMapping
                 , GMB.ProgramOptions
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , filepath
                     , optparse-applicative
                     , text
                     , transformers
                     , containers
                     , hinotify
                     , directory
                     , http-types
                     , bytestring
                     , cryptonite
                     , stm
                     , monad-loops
                     , configurator
                     , scotty
                     , mtl
                     , attoparsec
                     , aeson
                     , time
                     , iso8601-time
                     , bytestring
                     , free
                     , wreq
                     

executable gitlab-matrix-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gitlab-matrix-bot
                     , text
                     , lens
                     

test-suite gitlab-matrix-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gitlab-matrix-bot
                     , HUnit
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
                     , test-framework-quickcheck2
                     , quickcheck-instances
                     , text
                     , QuickCheck
                     , monad-loops
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010