name:                matrix-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pmiddend/matrix-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          pmidden@secure.mailbox.org
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules: Web.Matrix.API
                 , Web.Matrix.Bot.WebServer
                 , Web.Matrix.Bot.ConfigOptions
                 , Web.Matrix.Bot.ProgramOptions
  build-depends:       base >= 4.7 && < 5
                     , matrix-bot-api
                     , lens
                     , filepath
                     , plpd-utils
                     , warp
                     , wai
                     , optparse-applicative
                     , text
                     , transformers
                     , containers
                     , directory
                     , http-types
                     , bytestring
                     , cryptonite
                     , stm
                     , monad-loops
                     , configurator
                     , scotty
                     , mtl
                     , attoparsec
                     , aeson
                     , bytestring
                     , free
                     , wreq
                     

executable matrix-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , matrix-bot
                     , text
                     , plpd-utils
                     , mtl
                     , time
                     , iso8601-time
                     , uuid
                     , random
                     , lens
                     

test-suite matrix-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matrix-bot
                     , HUnit
                     , filepath
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
                     , test-framework-quickcheck2
                     , quickcheck-instances
                     , text
                     , mtl
                     , QuickCheck
                     , http-types
                     , monad-loops
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010