name:                matrix-bot
version:             0.1
synopsis:            Listen for HTTP requests, send results to matrix channels.
description:         Listen for HTTP requests, send results to matrix channels.
category:            Web
homepage:            https://github.com/plapadoo/matrix-bot#readme
bug-reports:         https://github.com/plapadoo/matrix-bot/issues
author:              Philipp Middendorf
maintainer:          Philipp Middendorf <middendorf@plapadoo.de>
license:             BSD3
license-file:        LICENSE
copyright:           plapadoo UG 2018
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings NoImplicitPrelude
  exposed-modules:     Web.Matrix.API
                     , Web.Matrix.Bot.WebServer
                     , Web.Matrix.Bot.ConfigOptions
                     , Web.Matrix.Bot.ProgramOptions
                     , Web.Matrix.Bot.IncomingMessage
                     , Plpd.Dhall
                     , Plpd.Http
                     , Plpd.MonadLog
                     , Plpd.Util
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , data-default
                     , filepath
                     , warp
                     , wai
                     , optparse-applicative
                     , cryptonite
                     , time
                     , iso8601-time
                     , text
                     , transformers
                     , containers
                     , directory
                     , http-types
                     , bytestring
                     , cryptonite
                     , stm
                     , monad-loops
                     , dhall
                     , text-format
                     , scotty
                     , mtl
                     , uuid
                     , random
                     , lucid
                     , attoparsec
                     , aeson
                     , bytestring
                     , free
                     , wreq

executable matrix-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , matrix-bot
                     , text
                     , mtl
                     , time
                     , iso8601-time
                     , uuid
                     , random
                     , lens
                     

test-suite matrix-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matrix-bot
                     , HUnit
                     , filepath
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
                     , test-framework-quickcheck2
                     , quickcheck-instances
                     , lucid
                     , text
                     , mtl
                     , QuickCheck
                     , http-types
                     , monad-loops
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: OverloadedStrings NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/plapadoo/matrix-bot